doc: category doc
